--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
               Year: 2023 | Materials: Acrylic Clay, wide canvas panels, video projection | One work consisting of 16
               units
             </div>
-            <img src="https://www.genspark.ai/api/files/s/1lAY7JXq" alt="The Najdi Triangle Installation" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/Agug0rGI" alt="The Najdi Triangle Installation Detail" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/najdi-1.jpg" alt="The Najdi Triangle Installation" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/najdi-2.jpg" alt="The Najdi Triangle Installation Detail" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
             <p>
               This work is inspired by the triangular motif in Najdi architecture. Through research, I discovered that
               the triangle is not merely a decorative element, but carries layered meanings and symbolic depth in the
@@ -357,9 +357,9 @@
               Year: 2023–2024 | Materials: Fabric, hand embroidery threads, beads, acrylic boxes | 7 panels |
               Dimensions: Various
             </div>
-            <img src="https://www.genspark.ai/api/files/s/2yAZ2oLE" alt="All We See is Appearance - Detail" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/wM3edb2D" alt="All We See is Appearance - Mountain Panel" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/JnqsAYbT" alt="All We See is Appearance - Full View" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/appearance-1.jpg" alt="All We See is Appearance - Detail" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/appearance-2.jpg" alt="All We See is Appearance - Mountain Panel" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/appearance-3.jpg" alt="All We See is Appearance - Full View" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
             <p>
               This work is inspired by the old proverb "We are only responsible for the outward" and the jurisprudential
               principle "The outward is ours, and God knows the inward."
@@ -378,11 +378,11 @@
               Sound Installation, 2025 | A Sonic Experience — A Day Across Three Generations | Duration: 6 minutes 20 seconds<br>
               Produced during an artist residency at Misk Art Institute, Riyadh
             </div>
-            <img src="https://www.genspark.ai/api/files/s/jFSH9Dn3" alt="Layers of Riyadh - Listening Room" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/oG1BydRT" alt="Layers of Riyadh - Cassette Tapes and Process Book" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/zo5ZHzEu" alt="Layers of Riyadh - Exhibition Text" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/7MLrGkwq" alt="Layers of Riyadh - Layered Curtains Entrance" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
-            <img src="https://www.genspark.ai/api/files/s/cw3ewx6E" alt="Layers of Riyadh - Seating Arrangement" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/riyadh-1.jpg" alt="Layers of Riyadh - Listening Room" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/riyadh-2.jpg" alt="Layers of Riyadh - Cassette Tapes and Process Book" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/riyadh-3.jpg" alt="Layers of Riyadh - Exhibition Text" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/riyadh-4.jpg" alt="Layers of Riyadh - Layered Curtains Entrance" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
+            <img src="images/riyadh-5.jpg" alt="Layers of Riyadh - Seating Arrangement" style="width: 100%; border-radius: 8px; margin: 2rem 0;" data-height-listener-added="true">
             
             <p><strong>Overview</strong></p>
             <p>
