--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 
           <div class="contact-info">
             <p>For inquiries, collaborations, or exhibition opportunities:</p>
-            <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection#2c4e555f445e55444d6c4b414d4540024f4341"><span class="__cf_email__" data-cfemail="a5c7dcd6cdd7dccdc4e5c2c8c4ccc98bc6cac8">[email&#160;protected]</span></a></p>
+            <p><strong>Email:</strong> <a href="mailto:byshryha@gmail.com">byshryha@gmail.com</a></p>
             <p>
               <strong>Instagram:</strong>
               <a href="https://instagram.com/Asmaalshurayhi" target="_blank">@Asmaalshurayhi</a>
